# crewai-starter-apps

./: README.md
open-ai/: README.md  requirements.txt
open-ai/openai_demo/: .env-example  README.md  pyproject.toml  report-using-gpt-4o-mini.md  report-using-haiku.md
open-ai/openai_demo/src/openai_demo/: crew.py  main.py
