[project]
name = "openai_demo"
version = "0.1.0"
description = "openai-demo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
openai_demo = "openai_demo.main:run"
run_crew = "openai_demo.main:run"
train = "openai_demo.main:train"
replay = "openai_demo.main:replay"
test = "openai_demo.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
